2015-11-21  Andreas Kirschbaum
	* common/artifact.c: Do not truncate face names.

2015-11-10  Daniel Hawkins
	* doc/scripts/levels-extract.pl: Created a new level extraction tool
	  for the documentation that works with modern server code and
	  is utilized for both html and latex outputs.
	* doc/playbook/Makefile.am: Point to the new perl script for level extraction.
	* doc/playbook/levels-extract: Removed. It was designed to find a hardcoded
	  exp table in living.c.
	* doc/playbook-html/Makefile.am: Point to the new perl script for level extraction.
	* doc/playbook-html/levels-extract: Removed. It was designed to find a hardcoded
	  exp table in living.c.

2015-05-31  Daniel Hawkins
	* common/living.c: Fixed a bug introduced in r19972 that made skill
	  experience based off total level instead of skill level.

2015-05-28  Daniel Hawkins
	* server/player.c: Tweak the starvation calculation to not use a loop.
	  Tweak the similar_direction calculation to use modulus instead of 
	  a switch statement.

2015-05-25  Daniel Hawkins
	* configure.ac: Made the configure script exit if lex and flex are not found.
	* utils/cfarches.xsl: Refactored can_use_xxx to be displayed in a single
	  cell. Also completed the set of can_use_xxx options.
	  Added XSL Transformation output for body slots.

2015-05-24  Daniel Hawkins
	* common/living.c: Fixed a bug in which the player's experience would
	  endlessly loop in the level below maxlevel.

2015-05-22	Daniel Hawkins
	* utils/cfarches.xsl: Refactored resistances to be displayed in a single
	  cell for each arch. Also added the rest of the resistances to the
	  XSL transformation.
	  Added attacktype to the generated HTML table.
	  Added plural names to the name display.

2015-05-21	Daniel Hawkins
	* utils/arch2xml.py: Tweaked whitespace of tag output.
	  Then added HTML/XML escapes for &, <, and > inside comments and messages.
	  Fixed the arch tag writing mechanism to give each object its own arch